Add an exception for Invalid App IDs. Improve docs.

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>jgeoplanet</artifactId>
 	<name>jGeoPlanet</name>
 	<version>0.0.1</version>
-	<description>Java client for Yahoo's Where On Earth (AKA GeoPlanet) service</description>
+	<description>Java client for Yahoo's GeoPlanet (AKA Where On Earth) service. Provides a way to look up WOE IDs as used by Twitter and FireEagle.</description>
 	<dependencies>
 		<dependency>
 			<groupId>org.json</groupId>
