--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,10 @@
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
-					<descriptorRefs>
-						<descriptorRef>bin</descriptorRef>
-						<descriptorRef>src</descriptorRef>
-					</descriptorRefs>
+					<descriptors>
+            			<descriptor>src/main/assembly/src.xml</descriptor>
+            			<descriptor>src/main/assembly/bin.xml</descriptor>
+          			</descriptors>
 				</configuration>
 				<executions>
 					<execution>
